--- a/src/Makefile
+++ b/src/Makefile
@@ -9,32 +9,32 @@ S21_SUITE_O = suite_*.o
 TG_TEST_C = tg_tests/test_*.c
 TG_TEST_O = test_*.o
 
-all: test
+all: clean test
 
 s21_string.a:
-	$(CC) $(CFLAGS) $(S21_STRING_C)
+	$(CC) $(CFLAGS) $(S21_STRING_C) -lm
 	ar r s21_string.a $(S21_STRING_O)
 	rm -rf *.o
 	ranlib s21_string.a
 
 test: s21_string.a
 	$(CC) $(CFLAGS) $(S21_SUITE_C) main.c
-	$(CC) $(OFLAGS) test $(S21_SUITE_O) main.o s21_string.a -lcheck
+	$(CC) $(OFLAGS) test $(S21_SUITE_O) main.o s21_string.a -lcheck -lm
 	rm -rf *.o *.a
 	./test
 
-tgtests: s21_string.a
-	$(CC) $(CFLAGS) $(TG_TEST_C) tg_tests/tg_test_me.c
-	$(CC) $(OFLAGS) tgtests $(TG_TEST_O) tg_test_me.o s21_string.a -lcheck
-	rm -rf *.o
-	./tgtests
+valgrind: s21_string.a
+	$(CC) $(CFLAGS) $(S21_SUITE_C) main.c
+	$(CC) $(OFLAGS) test $(S21_SUITE_O) main.o s21_string.a -lcheck -lm -lsubunit
+	rm -rf *.o *.a
+	./test
 
 gcov_report:
 	$(CC) --coverage $(CFLAGS) $(S21_STRING_C)
 	ar r s21_string.a $(S21_STRING_O)
 	ranlib s21_string.a
 	$(CC) $(CFLAGS) $(S21_SUITE_C) main.c
-	$(CC) --coverage $(OFLAGS) test $(S21_SUITE_O) main.o s21_string.a -lcheck
+	$(CC) --coverage $(OFLAGS) test $(S21_SUITE_O) main.o s21_string.a -lcheck -lm
 	rm -rf *.o *.a
 	./test
 	# gcov s21*.gcda
